[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "kb-refactor"
version = "0.1.0"
description = "Automatic knowledge-base notebook link refactorizer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Santiago Burastero" }
]

keywords = [
    "jupyter",
    "notebook",
    "knowledge-base",
    "markdown",
    "refactor",
    "links",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/your-user/kb-refactor"
Repository = "https://github.com/your-user/kb-refactor"
Issues = "https://github.com/your-user/kb-refactor/issues"

[project.scripts]
kb_refactor = "kb_refactor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_refactor"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true